<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2017 Zhihu Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <!--<string name="album_name_all">All Media</string>

    <string name="button_preview">Preview</string>
    <string name="button_apply_default">Apply</string>
    <string name="button_apply">Apply(%1$d)</string>
    <string name="button_back">Back</string>
    <string name="photo_grid_capture">Camera</string>
    <string name="empty_text">No media yet</string>
    <string name="button_ok">OK</string>

    <string name="error_over_count_default">You have reached max selectable</string>
    <string name="error_over_count">You can only select up to %1$d media files</string>
    <string name="error_under_quality">Under quality</string>
    <string name="error_over_quality">Over quality</string>
    <string name="error_file_type">Unsupported file type</string>
    <string name="error_type_conflict">Can\'t select images and videos at the same time</string>
    <string name="error_no_video_activity">No App found supporting video preview</string>
    <string name="error_over_original_size">Can\'t select the images larger than %1$d MB</string>
    <string name="error_over_original_count">%1$d images over %2$d MB. Original will be unchecked</string>
    <string name="button_original">Original</string>
    <string name="button_sure_default">Sure</string>
    <string name="button_sure">Sure(%1$d)</string>
    <plurals name="error_over_count">
        <item quantity="one">You can only select one media file</item>
        <item quantity="many">You can only select up to %1$d media files</item>
    </plurals>-->

    <string name="album_name_all">全部</string>
    <string name="see_only_one">只看一次</string>

    <string name="button_preview">预览</string>
    <string name="button_apply_default">使用</string>
    <string name="button_apply">使用(%1$d)</string>
    <string name="button_back">返回</string>
    <string name="photo_grid_capture">拍一张</string>
    <string name="empty_text">还没有图片或视频</string>
    <string name="button_ok">我知道了</string>

    <string name="error_over_count_default">您已经达到最大选择数量</string>
    <string name="error_over_count">最多只能选择 %1$d 个文件</string>
    <string name="error_under_quality">图片质量太低</string>
    <string name="error_over_quality">图片质量太高</string>
    <string name="error_file_type">不支持的文件类型</string>
    <string name="error_type_conflict">不能同时选择图片和视频</string>
    <string name="error_no_video_activity">没有支持视频预览的应用</string>
    <string name="error_over_original_size">"该照片大于 %1$d M，无法上传将取消勾选原图"</string>
    <string name="error_over_original_count">"有 %1$d 张照片大于 %2$d M\n无法上传，将取消勾选原图"</string>
    <string name="button_original">原图</string>
    <string name="button_sure_default">确定</string>
    <string name="button_sure">确定(%1$d)</string>
    <plurals name="error_over_count">
        <item quantity="one">只能选择一个文件</item>
        <item quantity="many">最多只能选择 %1$d 个文件</item>
    </plurals>
    <string name="send_only_one">仅看一次</string>
    <string name="choice">选中</string>
    <string name="material_dialog_title">提示</string>
    <string name="material_del_dialog_content">确认移除以上所选内容吗</string>
    <string name="material_del_dialog_cancel">取消</string>
    <string name="material_del_dialog_sure">确定</string>
    <string name="request_camera_material">为了能正常使用拍摄功能，Mungdax需要获取摄像头权限，请同意授权</string>
</resources>
