<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/dp_26"
    android:layoutDirection="ltr"
    app:cardCornerRadius="@dimen/dp_10"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_23"
            android:layout_marginTop="@dimen/dp_21"
            android:gravity="center"
            android:text="@string/material_dialog_title"
            android:textColor="#181818"
            android:textSize="@dimen/sp_18" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_23"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center"
            android:textColor="#777777"
            android:textSize="@dimen/sp_16"
            tools:text="@string/material_del_dialog_content" />

        <LinearLayout
            android:id="@+id/ll_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_20"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:layout_weight="1"
                android:background="@drawable/matisse_shape_f5f7fa_rectangle_r_20"
                android:gravity="center"
                android:text="@string/material_del_dialog_cancel"
                android:textColor="#9B9B9B"
                android:textSize="@dimen/sp_16" />

            <View
                android:id="@+id/v_spacer"
                android:layout_width="@dimen/dp_16"
                android:layout_height="@dimen/dp_16" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_sure"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:layout_weight="1"
                android:background="@drawable/matisse_shape_corner_blue_solid"
                android:gravity="center"
                android:text="@string/material_del_dialog_sure"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>