<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr">


    <com.zhihu.matisse.internal.ui.widget.PreviewViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black" />

    <RelativeLayout
        android:id="@+id/bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/preview_bottom_toolbar_bg"
        android:elevation="4dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        tools:targetApi="lollipop">

        <RelativeLayout
            android:id="@+id/rl_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:background="@drawable/shape_f5f7fa_r_23"
            android:minWidth="146dp">


            <TextView
                android:id="@+id/tv_button_apply_only_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="11dp"
                android:drawableStart="@drawable/ic_see_only_one"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:text="@string/send_only_one"
                android:textColor="#333333"
                android:drawableTint="#333333"
                android:textSize="16sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/button_apply"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="14dp"
            android:background="@drawable/shape_438eff_r_23"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:minWidth="146dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            tools:text="send" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:foreground="?selectableItemBackground"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:drawableStart="@drawable/icon_white_back"
            android:textColor="?attr/preview.bottomToolbar.back.textColor"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/top_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                tools:showIn="@layout/activity_matisse">

                <com.zhihu.matisse.internal.ui.widget.CheckView
                    android:id="@+id/check_view"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:tint="#ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:enabled="true"
                    android:paddingStart="4dp"
                    android:paddingLeft="4dp"
                    android:text="@string/choice"
                    android:textColor="?attr/preview.bottomToolbar.back.textColor"
                    android:textSize="14sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/originalLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foreground="?selectableItemBackground"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp"
                android:visibility="gone"
                tools:showIn="@layout/activity_matisse"
                tools:visibility="visible">


                <com.zhihu.matisse.internal.ui.widget.CheckRadioView
                    android:id="@+id/original"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:tint="#ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:enabled="true"
                    android:paddingStart="4dp"
                    android:paddingLeft="4dp"
                    android:text="@string/button_original"
                    android:textColor="?attr/preview.bottomToolbar.back.textColor"
                    android:textSize="14sp" />

            </LinearLayout>


            <TextView
                android:id="@+id/size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/preview_bottom_size"
                android:textSize="16sp"
                android:visibility="gone"
                tools:visibility="visible" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>